# periodicity-detection

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: build.yml  test-pr.yml
docs/: conf.py  index.rst
docs/api/: index.rst  periodicity_detection.rst
docs/user/: getting-started.md  index.md
periodicity_detection/: __init__.py  __main__.py  _version.py  autocorrelation.py  autoperiod.py  fft.py  find_length.py  findfrequency.py  number_peaks.py
periodicity_detection/methods/: __init__.py  autocorrelation.py  autoperiod.py  fft.py  find_length.py  findfrequency.py  number_peaks.py
tests/: test_fft.py
